# hsdraw

./: .gitignore  Cargo.toml  README.md  pyproject.toml  todo.md
.github/workflows/: test.yml  wheels.yml
crates/hsdraw-cli/: Cargo.toml
crates/hsdraw-cli/examples/: gen_synthetic.rs  survey_alias.rs
crates/hsdraw-cli/src/: main.rs
crates/hsdraw-core/: Cargo.toml
crates/hsdraw-core/src/: accessor.rs  common.rs  dat.rs  error.rs  export.rs  gx.rs  gx_dl.rs  gx_image.rs  hsd_struct.rs  import.rs  lib.rs  pobj_writer.rs  writer.rs
crates/hsdraw-core/tests/: from_scratch.rs  gx_encoder.rs  mobj_writer.rs  mutation.rs  parity.rs  pobj_writer.rs
crates/hsdraw-py/: Cargo.toml  pyproject.toml
crates/hsdraw-py/src/: lib.rs
crates/hsdraw-py/tests/: smoke_from_scratch.py  smoke_gx_decode.py
docs/: handoff.md  python_api.md  roadmap.md
docs/notes/: README.md  csx_export_parity.md  hsd_tobj_runtime_pipeline.md  phase0.md  phase4.md  phase5.md  phase6.md
