[package]
name = "hsdraw-cli"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "hsdraw-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
hsdraw-core = { path = "../hsdraw-core" }
serde_json = "1.0.149"
sha1 = "0.11.0"

[lints]
workspace = true
