[package]
name = "hsdraw-core"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
byteorder = "1.5.0"
hex = "0.4.3"
indexmap = { version = "2.14.0", features = ["serde"] }
png = "0.18.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.11.0"
thiserror = "2.0.18"

[lints]
workspace = true
