# maturin build config for the `hsdraw` Python module.
#
# Build:   `maturin build --release`           → wheel under target/wheels/
# Develop: `maturin develop --release`         → in-place install in current venv
# Smoke:   `python -c "import hsdraw; print(hsdraw.version())"`
#
# CI cross-platform build is wired up via cibuildwheel (Phase 6).  See
# `docs/handoff.md` § Phase 6 for the wheel matrix.

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "hsdraw"
description = "Pure-Rust HSD .dat reader/writer with PyO3 bindings"
license = { text = "MIT OR Apache-2.0" }
readme = "../../README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: File Formats",
]
dynamic = ["version"]

[tool.maturin]
# Keep the wheel ABI3-compatible so a single artifact serves Py3.7+.
features = ["pyo3/extension-module"]
module-name = "hsdraw"
# Cargo.toml lives next to this file; the workspace root is two dirs up.
manifest-path = "Cargo.toml"
